started working on small-screen media queery: verified MQ set up correctly

--- a/memory-game.css
+++ b/memory-game.css
@@ -80,3 +80,8 @@ h4 {
 .flipCard {
   transform: rotateY(180deg);
 }
+
+@media screen and (max-width: 620px) {
+
+}
+
